# stm32f4disco-renode

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  STM32F407VGTx_FLASH.ld  docker-test.sh  run_tests.sh
.github/workflows/: main.yaml
Include/: rcc.h
Source/: main.c  rcc.c  stm32f4xx_it.c
tests/: button-led.robot  stm32f4_leds.repl  tests.yaml
